--- a/src/components/elements/Actor/Actor.css
+++ b/src/components/elements/Actor/Actor.css
@@ -28,3 +28,27 @@
   width: 40%;
   box-sizing: border-box;
 }
+
+
+@media(max-width: 768px) {
+  .rmdb-actor {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .rmdb-actor img {
+    width: 100%;
+  }
+
+  .rmdb-actor-name {
+    width: 100%;
+    margin: 0 auto;
+    margin: 5px;
+  }
+
+  .rmdb-actor-character {
+    width: 100%;
+    margin: 5px;
+  }
+
+}
